compiler/testData/diagnostics/tests/delegatedProperty/missedGetter.fir.kt
// RUN_PIPELINE_TILL: SOURCE
val a: Int <!DELEGATE_SPECIAL_FUNCTION_MISSING!>by<!> A()

class A
